[Misc] Fix various mechanical SonarQube issues in the extension modules (#1865)
* Replace instanceof + cast with instanceof pattern matching (java:S6201)
* Merge collapsible nested if statements (java:S1066)
* Merge fall-through case labels into comma-separated labels (java:S6208)
* Remove decorative banner comment lines (java:S7476)
* Use the collection factory methods instead of the sizing constructors (java:S6485)
* Inline immediately-returned locals (java:S1488)
* Replace if-then-else returning booleans with a single return (java:S1126)
* Replace anonymous classes with lambdas (java:S1604)
* Replace a lambda with a method reference (java:S1612)
* Replace .stream().forEach() with .forEach() (java:S3706)
* Replace collect(Collectors.toList()) with toList() (java:S6204)
* Remove an unused private field (java:S1068)

Co-authored-by: Vincent Massol <vincent@massol.net>